--- a/app/src/main/res/drawable/audio_btn.xml
+++ b/app/src/main/res/drawable/audio_btn.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
-        <shape xmlns:android="http://schemas.android.com/apk/res/android"
-            android:shape="rectangle">
+        <shape android:shape="rectangle">
 
             <padding
                 android:bottom="@dimen/img_btn_padding"
@@ -12,7 +11,7 @@
             <size
                 android:width="@dimen/add_guide_media_btn"
                 android:height="@dimen/add_guide_media_btn" />
-            <solid android:color="@color/off_white" />
+            <solid android:color="@color/media_button_selected" />
             <corners android:radius="@dimen/corner_radius" />
 
         </shape>
