--- a/app/src/main/res/drawable/clear_btn.xml
+++ b/app/src/main/res/drawable/clear_btn.xml
@@ -12,8 +12,11 @@
             <size
                 android:width="@dimen/add_guide_media_btn"
                 android:height="@dimen/add_guide_media_btn" />
-            <solid android:color="@color/off_white" />
+            <solid android:color="@color/white" />
             <corners android:radius="@dimen/corner_radius" />
+            <stroke
+                android:width="1.5dp"
+                android:color="@color/tertiary_color" />
 
         </shape>
     </item>
