--- a/app/src/main/res/drawable/media_btn_pressed.xml
+++ b/app/src/main/res/drawable/media_btn_pressed.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
-        <shape xmlns:android="http://schemas.android.com/apk/res/android"
-            android:shape="rectangle">
+        <shape android:shape="rectangle">
 
             <padding
                 android:bottom="@dimen/img_btn_padding"
@@ -12,12 +11,14 @@
             <size
                 android:width="@dimen/add_guide_media_btn"
                 android:height="@dimen/add_guide_media_btn" />
-            <solid android:color="@color/media_button_selected" />
+            <solid android:color="@color/white" />
             <corners android:radius="@dimen/corner_radius" />
 
+            <stroke
+                android:width="1.5dp"
+                android:color="@color/main_color" />
         </shape>
     </item>
 
-    <item android:drawable="@drawable/ic_baseline_camera_alt_24" />
-
+    <item android:drawable="@drawable/ic_baseline_camera_alt_24_blue" />
 </layer-list>
