--- a/app/src/main/res/layout/location_guide_media.xml
+++ b/app/src/main/res/layout/location_guide_media.xml
@@ -22,8 +22,9 @@
         android:layout_width="match_parent"
         android:layout_height="500dp"
         android:background="@color/black"
+        android:visibility="gone"
         app:controller_layout_id="@layout/player_view"
-        android:visibility="gone"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
