--- a/app/src/main/res/layout/fragment_location_guide_list.xml
+++ b/app/src/main/res/layout/fragment_location_guide_list.xml
@@ -89,7 +89,8 @@
                 android:id="@+id/rvGuides"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:nestedScrollingEnabled="false" />
+                android:nestedScrollingEnabled="false"
+                />
 
             <ProgressBar
                 android:id="@+id/pbLoading"
