--- a/app/src/main/res/layout/location_guide.xml
+++ b/app/src/main/res/layout/location_guide.xml
@@ -50,7 +50,7 @@
                     android:fontFamily="sans-serif-medium"
                     android:text="username"
                     android:textColor="@color/black"
-                    android:textSize="13sp"
+                    android:textSize="14.5sp"
                     android:clickable="true"
                     android:focusable="true"/>
 
@@ -59,13 +59,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginEnd="10dp"
+                    android:layout_marginEnd="@dimen/guide_content_margin"
                     android:layout_weight="2"
                     android:fontFamily="sans-serif-medium"
                     android:gravity="right"
                     android:text="10d"
                     android:textColor="@color/quantum_grey"
-                    android:textSize="12sp" />
+                    android:textSize="12sp"
+                    tools:ignore="RtlHardcoded" />
 
             </LinearLayout>
 
