Implemented Top Location query that takes into counts the number of post, likes, and follows. Added UI for top locations around location

--- a/app/src/main/res/layout/fragment_location_guide_list.xml
+++ b/app/src/main/res/layout/fragment_location_guide_list.xml
@@ -76,8 +76,15 @@
                 android:queryHint="@string/search_guides"
                 android:searchIcon="@null"
                 android:visibility="visible" />
+
         </LinearLayout>
 
+        <include
+            android:id="@+id/recommended"
+            layout="@layout/recommended_locations"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="visible" />
 
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             android:id="@+id/swipeContainer"
@@ -96,7 +103,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:padding="@dimen/progress_bar_padding" />
-
             <include
                 android:id="@+id/imgExpanded"
                 layout="@layout/image_expanded"
