Top Location within 50 miles show up in LocationGuideFragment

--- a/app/src/main/res/layout/recommended_locations.xml
+++ b/app/src/main/res/layout/recommended_locations.xml
@@ -17,6 +17,7 @@
         android:textSize="17.5sp" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvRecommended"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
