Fixed scrolling bug in LocationGuideFragment Fixed Navigation bug in LocationGuideFragment Changed ui of fragment_location_guide_list.xml

--- a/app/src/main/res/layout/fragment_compose.xml
+++ b/app/src/main/res/layout/fragment_compose.xml
@@ -168,7 +168,7 @@
         <ImageView
             android:id="@+id/ivPreview"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="40dp"
             android:visibility="gone"
@@ -177,7 +177,7 @@
         <VideoView
             android:id="@+id/vvPreview"
             android:layout_width="match_parent"
-            android:layout_height="300dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:visibility="gone" />
 
