--- a/app/src/main/res/layout/recommended_locations.xml
+++ b/app/src/main/res/layout/recommended_locations.xml
@@ -2,9 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_margin="15dp"
+    android:layout_marginLeft="10dp"
+    android:layout_marginEnd="10dp"
+    android:layout_marginBottom="10dp"
     android:orientation="vertical">
 
     <TextView
@@ -18,11 +20,11 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvRecommended"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="2.5dp"
+        android:nestedScrollingEnabled="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="23dp"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/searchview_bg_secondary"/>
+        tools:layout_editor_absoluteY="23dp" />
 </LinearLayout>
