--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,7 +17,7 @@
     <color name="hint_color">#A2A2A2</color>
     <color name="main_color">#003F91</color>
     <color name="secondary_color">#3590F3</color>
-    <color name="tertiary_color">#CF9893</color>
+    <color name="tertiary_color">#EF767A</color>
 
 
 </resources>
