--- a/app/src/main/res/layout/fragment_profile_guide.xml
+++ b/app/src/main/res/layout/fragment_profile_guide.xml
@@ -3,11 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/off_white"
     android:clickable="true"
-    android:padding="10dp"
-    tools:context=".fragments.ProfileGuideFragment"
     android:focusable="true"
-    android:background="@color/off_white">
+    android:paddingStart="10dp"
+    android:paddingTop="10dp"
+    android:paddingEnd="10dp"
+    tools:context=".fragments.ProfileGuideFragment">
 
     <TextView
         android:id="@+id/tvEmptyList"
@@ -27,10 +29,10 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvGuides"
-            android:nestedScrollingEnabled="false"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="visible"/>
+            android:nestedScrollingEnabled="false"
+            android:visibility="visible" />
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
