--- a/app/src/main/res/layout/location_guide.xml
+++ b/app/src/main/res/layout/location_guide.xml
@@ -119,8 +119,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginStart="@dimen/guide_content_margin"
-
+                    android:layout_marginStart="12.5dp"
                     android:layout_marginEnd="@dimen/guide_content_margin"
                     android:text="1"
                     android:textColor="@color/black"
