--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,10 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.TravelGuide" parent="Theme.Design.Light.NoActionBar">
+    <style name="Theme.TravelGuide" parent="Theme.MaterialComponents.Light.NoActionBar">
 
         <!-- light theme navigation and status bar   -->
         <item name="android:windowTranslucentStatus" tools:ignore="DuplicateDefinition">true</item>
-
 
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/main_color</item>
