--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -41,6 +41,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="15dp"
+            android:fontFamily="sans-serif-medium"
             android:text="TextView"
             android:textAlignment="center"
             android:textColor="@color/black"
